force-app/main/default/objects/BT_Payment__c/BT_Payment__c.object-meta.xml
<CustomObject>
    <label>BT Payment (AP)</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Payments (AP)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>