force-app/main/default/objects/BT_Payment__c/fields/BT_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>BT_Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Payment Request</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipLabel>BT Payments (AP)</relationshipLabel>
    <relationshipName>BT_Payments_AP</relationshipName>
    <type>Lookup</type>
</CustomField>