force-app/main/default/objects/BT_Payment__c/fields/Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Posted__c</fullName>
    <inlineHelpText>The date the Payment was posted for accounting purposes.  When the Payment is Posted the system creates a Finance Transaction.</inlineHelpText>
    <label>Date Posted</label>
    <type>Date</type>
</CustomField>