force-app/main/default/objects/BT_Payment__c/fields/Invoices_AP__c.field-meta.xml
<CustomField>
    <fullName>Invoices_AP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoices (AP)</label>
    <referenceTo>Account_Payable_Clone__c</referenceTo>
    <relationshipName>Payment</relationshipName>
    <type>Lookup</type>
</CustomField>