force-app/main/default/objects/BT_Payment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Posted</fullName>
            </value>
            <value>
                <fullName>Ready To Post</fullName>
                <isActive>false</isActive>
                <label>Ready To Post</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>